flapivor/tests/m3/hopix/typechecker/good/36-recurse-datatype-embedding-functions.hopix
type S = C (Int, Unit -> S)

def from : Int -> S (n) = C<> (n, (fun (u) => from (n + 1) : Unit -> S))