flapivor/tests/m3/hopix/typechecker/bad/21-invalid-function-call-07.hopix
def f : Int -> String (x) = f (31) + 0